--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
+click==8.1.3
+colorama==0.4.6
+Flask==2.2.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
 num2words==0.5.6
-pydice==1.0.0
+pydice @ git+https://github.com/d2emon/pydice.git@dd031d68ea500e99b568d361c271ca89490690ff
+Werkzeug==2.2.3
